# rust-rosetta

./: .gitignore  Cargo.toml
src/: forest_fire.rs  lib.rs
