[package]
name = "rust-rosetta"
version = "0.0.1"
build = "build.rs"
authors = [
    "Andrew Hobden, https://github.com/Hoverbear",
    "Adolfo Ochagavía, https://github.com/aochagavia",
    "Paolo Falabella, https://github.com/pfalabella",
    "Boris Egorov, https://github.com/JIghtuse",
    "Joe Schafer, https://github.com/jschaf",
    "Thomas P, https://github.com/TisButMe",
    "Bjarki Ágúst Guðmundsson, https://github.com/SuprDewd",
    "Thiez, https://github.com/Thiez",
    "Simon Morris simon,-https://github.com/morris",
    "eliovir, https://github.com/eliovir",
    "Joshua Yanovski, https://github.com/pythonesque",
    "Nicolas Barbey, https://github.com/nbarbey",
    "yuanchenyang, https://github.com/yuanchenyang",
    "Jonathan S, https://github.com/gereeter",
    "JakeMick, https://github.com/JakeMick",
    "Rohan Prinja, https://github.com/wenderen",
    "Andres Nötzli, https://github.com/4tXJ7f",
    "Eric S. Bullington, https://github.com/esbullington",
    "Gulshan Singh, https://github.com/gsingh93",
    "SiegeLord, https://github.com/SiegeLord",
    "Tim Joseph Dumol, https://github.com/TimDumol",
    "Utkarsh Kukreti, https://github.com/utkarshkukreti",
    "Florian MOREL, https://github.com/Einh06",
    "webmobster, https://github.com/webmobster",
    "Mathias Labeyrie, https://github.com/Nojan",
    "Wei Yen, https://github.com/yen223",
    "Hugh Manning, https://github.com/hmanning77",
    "Gavin Baker, https://github.com/gavinb",
    "Rupert Lane, https://github.com/rupertl",
    "Joshua Skootsky, https://github.com/JoshuaSkootsky",
    "James Hurst, https://github.com/jamesrhurst",
    "Yukang Chen, https://github.com/chenyukang",
    "Rootul Patel, https://github.com/rootulp",
    "Frank McSherry, http://github.com/frankmcsherry",
    "Bartosz Marcinkowski, https://github.com/bm371613",
    "Yale Cason, https://github.com/ghotiphud",
    "Makoto Nakashima, https://github.com/gifnksm",
    "Marvin Löbel, https://github.com/Kimundi",
    "Raphael Heitjohann, https://github.com/trideon3",
    "Glen De Cauwsemaecker, https://github.com/glendc",
    "Amos Bird, https://github.com/amosbird",
    "Brian Schmitz, https://github.com/foodhype",
    "Juan Vidal Pich, https://github.com/juanevp",
    "Peter Jacobs, https://github.com/crespyl",
    "Alex Globus, https://github.com/aglobus",
    "Haraldur Karlsson, https://github.com/haralkar",
]

[dependencies]
[[bin]]
# http://rosettacode.org/wiki/Four_bit_adder
name = "forest_fire"
path = "src/forest_fire.rs"
